--- a/hypothesis-tests/distributional-tests/ks_test.Rmd
+++ b/hypothesis-tests/distributional-tests/ks_test.Rmd
@@ -30,16 +30,16 @@ knitr::opts_knit$set(root.dir = '~/Desktop/Personal/personal_code/distributional
 options(scipen = 999)
 
 # basic packages needed throughout
+library(plyr) # always load prior to dplyr if needed
 library(dplyr) # for piping
 library(ggplot2) # for visualization
 library(ggthemes) # for custom visualization
-library(broom) # needing for tidying model summary output into a df
+
 ```
 
 ```{r}
 # need to get the other newer portion of this dataset
 test_df <- read.csv("data/ks-projects-201612.csv")
-str(test_df)
 ```
 
 ```{r}
@@ -51,37 +51,41 @@ The distributional tests we can run here span a wide variety of options. Right n
 - How do the distributions of $ amount funded (dollar-denominated) differ by offering country?
 - Does this phenomenon vary based on the category or sub-category of the offering?
 
-```{r}
-# quick rounding up of the pledged amount
-library(plyr)
-round_any(132.1, 10)               # returns 130
-round_any(132.1, 10, f = ceiling)  # returns 140
-round_any(132.1, 5, f = ceiling)   # returns 135
-```
-
 Things to think about:
 
 - should I round to nearest high 10, as done below?
 - any other filters I'm leaving out?
 
 ```{r}
-
 test_df_forviz <- test_df %>% 
-  # filters to just dollar or pound-denominated offerings
+  # filters to just kickstarters from the US and GB
   dplyr::filter(country %in% c('US','GB')) %>%
-  # filter to only the cases where the USD-denominated pledged amount was less than 5000
+  # filters to just kickstarters under a certain category
+  dplyr::filter(category == 'Music') %>%
+  # filter to only the cases where the USD-denominated pledged amount was less than 10000
   # this dampens the long tails problem in a non-fancy way that I'll change later
-  dplyr::filter(as.numeric(as.character(usd.pledged)) < 10000) %>%
-  mutate(rounded_usdpledged = plyr::round_any(as.numeric(as.character(usd.pledged)), 10, f=ceiling)) %>%
-  # exploratorily dropping instances where the funding amount is set to 0 
-  dplyr::filter(as.numeric(as.character(usd.pledged)) > 0)
+  # dplyr::filter(as.numeric(as.character(usd.pledged)) < 10000) %>%
+  mutate(
+    # rounded pledged dollar values to nearest 10
+    rounded_usdpledged = plyr::round_any(as.numeric(as.character(usd.pledged)), 10)) 
 ```
 
 ```{r}
-ggplot(test_df_forviz, aes(x=as.numeric(as.character(usd.pledged)), color=country)) +
-  geom_density()
+# ggplot code for the basid density plot
+ggplot(data = test_df_forviz, aes(x=as.numeric(as.character(usd.pledged)))) +
+  geom_density(aes(fill=factor(country)),alpha = 0.4) +
+  scale_x_continuous(limits = c(0,5000)) +
+  theme(legend.position = "top") +
+  labs(
+    title = paste0("PDF for music category kickstarters"),
+    y = "Concentration Density",
+    x = "Amount Pledged (converted to USD)",
+    fill = "Country of origin for kickstarter"
+  )
 
 ```
+
+
 
 
 ```{r}
