add facet-wrapped density plot exemplar

--- a/eda-and-visualization/eda_and_visualization.Rmd
+++ b/eda-and-visualization/eda_and_visualization.Rmd
@@ -18,7 +18,7 @@ The purpose of this document is to serve as a smorgasbord of EDA techniques and 
 
 ```{r setup, echo = F}
 # setting the appropriate working directory
-knitr::opts_knit$set(root.dir = '~/Desktop/Personal/personal_code/stats_and_modeling/')
+knitr::opts_knit$set(root.dir = '~/Desktop/Personal/personal_code/data_science_toolkit/')
 ```
 
 ```{r results='hide', warning=FALSE, message=FALSE}
@@ -34,8 +34,7 @@ library(DataExplorer) # allows for creation of missing values map
 library(RCurl) # Provides functions to allow one to compose general HTTP requests, etc. in R
 library(broom) # for tidy modeling and displaying of model / test results 
 library(ggthemes) # for more custom ggplot themes
-
-# If I reference functions that are more niche, I will call them explicitly in-line as well
+# if I reference functions that are more niche, I will call them explicitly in-line as well
 ```
 
 # Importing, Exploring, and Cleaning the Data
@@ -124,6 +123,8 @@ base_df %>%
 
 # Density Plots
 
+## 2 PDFs Compared
+
 ```{r}
 base_df %>%
   dplyr::select(goal, country) %>%
@@ -153,8 +154,37 @@ base_df %>%
 
 ```
 
+## 3 PDFs Compared w/ Facets
 
-
+```{r}
+base_df %>%
+  dplyr::select(goal, country, state) %>%
+  dplyr::filter(
+    country %in% c("GB","FR"),
+    goal <= 25000,
+    state %in% c("failed","successful")
+    ) %>%
+  # base ggplot call
+  ggplot(., aes(x=goal, fill=country)) +
+    # specifying the histogram
+    geom_density(color = "black", alpha = 0.8) +
+    facet_wrap(~state) +
+    # picking a colorblind-friendly color scheme and theme
+    ggthemes::scale_fill_tableau() +
+    ggthemes::theme_economist() +
+    theme(
+      legend.position = "top",
+      legend.title = element_text(size=12),
+      legend.text = element_text(size=12)
+      ) +
+    # takes care of all labeling
+    labs(
+      title = paste0("Density Plot of Selected Countries' Goal Distribution"),
+      y = "Concentration Density",
+      x = "Campaign Fundraising Goal (USD)",
+      fill = "Country of Origin"
+    )
+```
 
 ```{r}
 
